--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,12 @@ body {
   position: relative;
   margin-bottom: 15px;
   width: 100%;
-  height: 365px;
+  height: 220px;
   overflow: hidden;
 }
 .wrap .banner .bannerInner {
   width: 100%;
-  height: 325px;
+  height: 220px;
   background: url("../images/default.gif") no-repeat center #ffffff;
   cursor: pointer;
 }
@@ -140,6 +140,7 @@ body {
   padding-top: 13px;
 }
 .wrap .searchBox > div > ul > li.search-sec.desc .letterBox li {
+  position: relative;
   float: left;
   display: inline;
   margin-right: 8px;
@@ -148,11 +149,38 @@ body {
   font-size: 16px;
   text-align: center;
   line-height: 20px;
-  font-weight: 600;
   color: #333333;
   cursor: pointer;
 }
+.wrap .searchBox > div > ul > li.search-sec.desc .letterBox li div {
+  display: none;
+  position: absolute;
+  left: -180px;
+  padding: 10px 20px 0 20px;
+  width: 400px;
+  height: 27px;
+  background-color: #12b8ff;
+}
+.wrap .searchBox > div > ul > li.search-sec.desc .letterBox li div span {
+  display: inline-block;
+  padding: 0 19px;
+  font-size: 16px;
+  text-align: center;
+  line-height: 22px;
+  color: #ffffff;
+}
+.wrap .searchBox > div > ul > li.search-sec.desc .letterBox li div span:hover {
+  color: #12b8ff;
+  background-color: #ffffff;
+}
 .wrap .searchBox > div > ul > li.search-sec.desc .letterBox li:hover {
+  color: #ffffff;
+  background-color: #12b8ff;
+}
+.wrap .searchBox > div > ul > li.search-sec.desc .letterBox li:hover div {
+  display: block;
+}
+.wrap .searchBox > div > ul > li.search-sec.desc .letterBox li .letterBox li.act {
   color: #ffffff;
   background-color: #12b8ff;
 }
