--- a/css/styles.less
+++ b/css/styles.less
@@ -9,11 +9,11 @@ html,body{
     position: relative;
     margin-bottom: 15px;
     width: 100%;
-    height: 365px;
+    height: 220px;
     overflow: hidden;
     .bannerInner{
       width: 100%;
-      height: 325px;
+      height: 220px;
       background: url("../images/default.gif") no-repeat center #ffffff;
       cursor: pointer;
       div{
@@ -134,6 +134,7 @@ html,body{
       >ul>li.search-sec.desc{
         padding-top: 13px;
         .letterBox li{
+          position: relative;
           float: left;
           display: inline;
           margin-right: 8px;
@@ -142,10 +143,37 @@ html,body{
           font-size: 16px;
           text-align: center;
           line-height: 20px;
-          font-weight: 600;
           color: #333333;
           cursor: pointer;
+          div{
+            display: none;
+            position: absolute;
+            left: -180px;
+            padding: 10px 20px 0 20px;
+            width: 400px;
+            height: 27px;
+            background-color: #12b8ff;
+            span{
+              display: inline-block;
+              padding: 0 19px;
+              font-size: 16px;
+              text-align: center;
+              line-height: 22px;
+              color: #ffffff;
+              &:hover{
+                color: #12b8ff;
+                background-color: #ffffff;
+              }
+            }
+          }
           &:hover{
+            color: #ffffff;
+            background-color: #12b8ff;
+            div{
+              display: block;
+            }
+          }
+          .letterBox li.act{
             color: #ffffff;
             background-color: #12b8ff;
           }
